kubernetes_deploy/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ai-data-capture
  labels:
    name: ai-data-capture
    environment: production
